Fixed mobile layout issues

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -64,7 +64,7 @@
     transform: scale(1.3);
 }
 
-@media (min-width: 480px) and (max-width: 1200px){
+@media (max-width: 932px){
     .header .social i {
         font-size: 30px;
     }
@@ -81,5 +81,13 @@
         margin-right: 150;
     }
 
-    
+    .profile li {
+        position: relative;
+        right: 0px;
+    }
+
+    .details {
+        position: relative;
+        right: 60px;
+    }
 }
